fix: fixing neetcode docs

--- a/content/docs/neetcode.mdx
+++ b/content/docs/neetcode.mdx
@@ -1,6 +1,6 @@
 ---
 title: "NeetCode Learning Summary"
-date: "2025-07-04"
+description: "A personal summary of my learning journey with NeetCode — covering algorithms, data structures, and the importance of clean code and proper naming."
 ---
 
 # 🧑‍💻 NeetCode Learning Summary
